# rust-mavlink

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  test.yml
mavlink/: Cargo.toml
mavlink-bindgen/: Cargo.toml
mavlink-bindgen/src/: cli.rs  lib.rs  parser.rs
mavlink-bindgen/tests/: e2e_snapshots.rs
mavlink-bindgen/tests/definitions/: undersized_bitflag.xml
mavlink-bindgen/tests/snapshots/: e2e_snapshots__deprecated.xml@deprecated.rs.snap  e2e_snapshots__heartbeat.xml@heartbeat.rs.snap  e2e_snapshots__mav_bool.xml@mav_bool.rs.snap  e2e_snapshots__mav_cmd.xml@mav_cmd.rs.snap  e2e_snapshots__no_field_description.xml@no_field_description.rs.snap  e2e_snapshots__parameters.xml@parameters.rs.snap  e2e_snapshots__superseded.xml@superseded.rs.snap  e2e_snapshots__undersized_bitflag.xml@mod.rs.snap  e2e_snapshots__undersized_bitflag.xml@undersized_bitflag.rs.snap
mavlink-core/: Cargo.toml
mavlink-core/src/: bytes_mut.rs  connectable.rs  connection_shared.rs  error.rs  lib.rs  peek_reader.rs  utils.rs
mavlink-core/src/async_connection/: direct_serial.rs  file.rs  mod.rs  tcp.rs  udp.rs
mavlink-core/src/connection/: async.rs  (+6 more)
mavlink/examples/mavlink-dump/: Cargo.toml
mavlink/examples/mavlink-dump/src/: main.rs
mavlink/tests/: encode_decode_tests.rs  file_connection_tests.rs  helper_tests.rs  invalid_value_test.rs  mav_frame_tests.rs  parse_test.rs  process_log_files.rs  random_test.rs  serde_test.rs  signing.rs  target_fields_tests.rs  tcp_loopback_async_tests.rs  tcp_loopback_tests.rs  v2_encode_decode_tests.rs
scripts/: list_dialect_features.py
(+15 files in other folders)
